Add feature to observe a histogram and summary put labels and help text to request body as x-www-for-urlencoded string
